syntax = "proto3";

package Protocol;
option csharp_namespace = "Google.Protobuf.Protocol";

enum EObjectState
{
	EOBJECT_STATE_NONE = 0;
	EOBJECT_STATE_IDLE = 1;
	EOBJECT_STATE_MOVE = 2;
	EOBJECT_STATE_SKILL = 3;
	EOBJECT_STATE_DEAD = 4;
}

enum EMoveDir
{
	EMOVE_DIR_NONE = 0;
	EMOVE_DIR_UP = 1;
	EMOVE_DIR_DOWN = 2;
	EMOVE_DIR_LEFT = 3;
	EMOVE_DIR_RIGHT = 4;
}

enum EGameObjectType 
{
	EGAME_OBJECT_TYPE_NONE = 0;
	EGAME_OBJECT_TYPE_HERO = 1;
	EGAME_OBJECT_TYPE_MONSTER = 2;
	EGAME_OBJECT_TYPE_PROJECTILE = 3;
	EGAME_OBJECT_TYPE_ITEM_HOLDER = 4;
}

enum ECellCollisionType
{
	ECELL_COLLISION_TYPE_NONE = 0;
	ECELL_COLLISION_TYPE_WALL = 1;
}

enum EFindPathResult
{
    EFIND_PATH_RESULT_NONE = 0;
    EFIND_PATH_RESULT_FAIL_LERPCELL = 1;
    EFIND_PATH_RESULT_FAIL_NO_PATH = 2;
    EFIND_PATH_RESULT_FAIL_MOVE_TO = 3;
    EFIND_PATH_RESULT_FAIL_SAME_POSITION = 4;
    EFIND_PATH_RESULT_SUCCESS = 5;
}

enum EHeroClass
{
	EHERO_CLASS_NONE = 0;
	EHERO_CLASS_WARRIOR = 1;
	EHERO_CLASS_RANGER = 2;
	EHERO_CLASS_WIZARD = 3;
	EHERO_CLASS_ROGUE = 4;
}